<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    android:orientation="vertical"
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".UserPageFragment">

    <TextView
        android:layout_marginTop="20dp"
        android:gravity="center"
        android:id="@+id/ponts_textview"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/_0_z_ldpont_od_van"
        android:textSize="30sp"
        />

    <TextView
        android:id="@+id/emission_textview"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:layout_marginTop="5dp"
        android:text="@string/ez_1000_szenyez_snek_felel_meg"
        android:textSize="20sp" />
        
    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:layout_marginTop="20dp"
        android:text="@string/el_rt_eredm_nyek"
        android:textSize="25sp" />
    <ListView
        android:layout_marginTop="5dp"
        android:layout_width="match_parent"
        android:layout_height="200dp"
        android:id="@+id/achievementList"
        tools:listitem="@layout/achievement_list_item"/>

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:layout_marginTop="20dp"
        android:text="@string/legut_bbi_10_utad"
        android:textSize="25sp" />

    <com.github.mikephil.charting.charts.BarChart
        android:id="@+id/user_barChart"
        android:layout_width="match_parent"
        android:layout_height="200dp"
        android:layout_weight="1"
        android:layout_marginTop="5dp"
        android:layout_marginBottom="20dp"/>

</LinearLayout>