<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:background="@drawable/backgroundleft"
    android:orientation="vertical"
    android:gravity="center_vertical"
    android:id="@+id/settingsView">

    <androidx.cardview.widget.CardView
        android:layout_width="match_parent"
        android:layout_height="450dp"
        android:layout_gravity="center_vertical"
        app:cardBackgroundColor="@color/darkCardColor"
        app:cardCornerRadius="20dp"
        app:cardElevation="10dp"
        app:cardMaxElevation="12dp"
        app:cardPreventCornerOverlap="true"
        app:cardUseCompatPadding="true">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical">
            <TextView
                android:id="@+id/settingsHeader"
                style="@style/parent"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/loginViewsMargin"
                android:gravity="center_horizontal"
                android:padding="5dp"
                android:text="@string/settings"
                android:textAlignment="center"
                android:textColor="@color/whiteTextColor"
                android:textSize="30sp" />

            <!--edit text for new user name-->
            <EditText
                android:id="@+id/settingsNewUsername"
                android:layout_width="match_parent"
                android:layout_height="50dp"
                android:layout_marginStart="10dp"
                android:layout_marginTop="20dp"
                android:layout_marginEnd="10dp"
                android:hint="@string/settingsUsername"
                android:inputType="text"
                android:maxLines="1"
                android:textColorHint="@color/whiteTextColor"
                android:textColor="@color/whiteTextColor"/>

            <!--edit text for new user password-->
            <EditText
                android:id="@+id/settingsNewPassword"
                android:layout_width="match_parent"
                android:layout_height="50dp"
                android:layout_marginStart="10dp"
                android:layout_marginTop="20dp"
                android:layout_marginEnd="10dp"
                android:hint="@string/settingNewPw"
                android:maxLines="1"
                android:textColorHint="@color/whiteTextColor"
                android:textColor="@color/whiteTextColor"
                android:inputType="textPassword"/>

            <!--edit text for current user password !required-->
            <EditText
                android:id="@+id/settingsCurrentPassword"
                android:layout_width="match_parent"
                android:layout_height="50dp"
                android:layout_marginStart="10dp"
                android:layout_marginTop="20dp"
                android:layout_marginEnd="10dp"
                android:layout_marginBottom="20dp"
                android:hint="@string/settingsCurrentPw"
                android:inputType="textPassword"
                android:textColorHint="@color/whiteTextColor"
                android:textColor="@color/whiteTextColor"/>

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:orientation="horizontal">

                <TextView
                    android:id="@+id/settingsBack"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/cancel"
                    android:layout_gravity="start"
                    android:textColor="@color/teal_700"
                    android:textSize="20sp"
                    android:layout_marginStart="20dp"
                    android:clickable="true"
                    android:focusable="true" />

                <androidx.appcompat.widget.AppCompatButton
                    android:id="@+id/settingsConfirmButton"
                    android:layout_width="100dp"
                    android:layout_height="wrap_content"
                    android:layout_gravity="end"
                    android:layout_marginStart="170dp"
                    android:layout_marginTop="@dimen/loginViewsMargin"
                    android:layout_marginEnd="10dp"
                    android:background="@drawable/button_item"
                    android:text="@string/confirm"
                    android:textAllCaps="false"
                    android:textColor="@color/whiteTextColor"
                    />
            </LinearLayout>

        </LinearLayout>

    </androidx.cardview.widget.CardView>

</LinearLayout>