<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="vertical"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:background="@color/whiteCardColor"/>
    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:paddingTop="5dp"
        android:paddingBottom="5dp">
    <androidx.cardview.widget.CardView
        android:layout_marginStart="30dp"
        android:layout_width="50dp"
        android:layout_height="50dp"
        app:cardCornerRadius="250dp"
        android:layout_centerVertical="true"
        android:layout_alignParentStart="true"
        android:layout_gravity="center">
        <ImageView
            android:id="@+id/rank_profpic"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:src="@drawable/npic"
            android:contentDescription="@string/profile_picture"/>
    </androidx.cardview.widget.CardView>
    <TextView
        android:id="@+id/rank_username"
        android:layout_centerVertical="true"
        android:layout_centerHorizontal="true"
        android:layout_width="150dp"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:text="@string/username_placeholder"
        />
    <TextView
        android:id="@+id/rank_points"
        android:layout_centerVertical="true"
        android:layout_alignParentEnd="true"
        android:layout_marginEnd="30dp"
        android:layout_width="100dp"
        android:layout_height="wrap_content"
        android:gravity="end"
        android:text="@string/points"
        />
    </RelativeLayout>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:background="@color/whiteCardColor"/>
</LinearLayout>